<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    tools:context=".login">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:alpha="0.5"
        />

    <ImageView
        android:id="@+id/logo"

        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@drawable/logo5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundwhite">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/username"
                android:layout_gravity="center"
                android:paddingLeft="10dp"/>
            <EditText
                android:id="@+id/editUsername"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:hint="@string/username"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:drawablePadding="10dp"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/roundwhite"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:textSize="13sp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round"
            android:text="@string/login"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="150dp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</RelativeLayout>