<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greylight"
    tools:context=".second">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@drawable/bg111"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/logo5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="215dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            card_view:cardCornerRadius="10dp"
                            card_view:contentPadding="10dp"
                            card_view:cardElevation="4dp"
                            card_view:cardMaxElevation="6dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/ccc">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/profile"
                                    android:layout_centerInParent="true"
                                    android:textColor="@android:color/white"
                                    android:textSize="20sp" />

                                <Button
                                    android:id="@+id/btnProfile"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />
                            </RelativeLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            card_view:cardCornerRadius="10dp"
                            card_view:contentPadding="10dp"
                            card_view:cardElevation="4dp"
                            card_view:cardMaxElevation="6dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/aaa">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/white"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/hijab"
                                    android:textSize="20sp" />

                                <Button
                                    android:id="@+id/btnHijab"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />
                            </RelativeLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            card_view:cardCornerRadius="10dp"
                            card_view:contentPadding="10dp"
                            card_view:cardElevation="4dp"
                            card_view:cardMaxElevation="6dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/bbb">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="5dp"
                                    android:layout_centerInParent="true"
                                    android:textColor="@android:color/white"
                                    android:text="@string/dresses"
                                    android:textSize="20sp" />

                                <Button
                                    android:id="@+id/btnGamis"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent" />
                            </RelativeLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>